--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "WAFUU INTENSIFIES (>ω&lt;)",
   "main": "app.js",
+  "scripts": {
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/castaneai/wafuu.git"
@@ -14,6 +17,10 @@
   },
   "homepage": "https://github.com/castaneai/wafuu#readme",
   "dependencies": {
-    "mastodon-api": "^1.3.0"
+    "mastodon-api": "^1.3.0",
+    "slack-incoming-webhook": "^1.1.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
